--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <head>
     <body>
     <p>Hello World!</p>
+    <a href="/columbia">Visit Columbia Section of Website</a>
+    <a href="/1006">Python</a>
     </body>
 </html>
 
