added photo, text color

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,33 @@
     <head>
         <!--specifies title of the page !-->
         <title>Home</title>
+        <style>
+        h1 {
+            color: #d147a3;
+        }
+        
+        .purple {
+            color: purple;
+        }
+        p {
+            color: #ac39ac
+        }
+        </style>
     <head>
     <body>
-    <p>Hello World!</p>
-    <a href="/columbia">Visit Columbia Section of Website</a>
-    <a href="/1006">Python</a>
+        <h1>hello.</h1>
+        <p>my name is yena shin.
+        </p>
+        <p>i'm a first year in columbia seas planning to study biomedical engineering.
+        </p>
+        <p>
+            <img src="https://user-images.githubusercontent.com/65421091/82098691-71d0da00-96d3-11ea-9da9-763591b9048d.JPG" alt="Yena.jpg" width="150" />
+        </p>
+        <p class="purple">
+            Check out this link: <a href="/columbia">Visit Columbia Section of Website</a>
+        </p>
+        <a href="/1006">Python</a>
+        
     </body>
 </html>
 
