--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,9 @@
             <img src="https://user-images.githubusercontent.com/65421091/82098691-71d0da00-96d3-11ea-9da9-763591b9048d.JPG" alt="Yena.jpg" width="150" />
         </p>
         <p class="purple">
-            Check out this link: <a href="/columbia">Visit Columbia Section of Website</a>
+            check out these links
         </p>
+        <p><a href="/aboutme">about me</a></p>
         <a href="/1006">Python</a>
         
     </body>
