--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,11 @@
             <img src="https://user-images.githubusercontent.com/65421091/82098691-71d0da00-96d3-11ea-9da9-763591b9048d.JPG" alt="Yena.jpg" width="150" />
         </p>
         <p class="purple">
-            check out these links
+            check out these links.   
+                <a href="/aboutme">about me</a> //  
+                <a href="/classes">classes</a> //
+                click <a href="https://youtu.be/JCrnRLV5slc">here</a> for a surprise
         </p>
-        <p><a href="/aboutme">about me</a></p>
-        <a href="/1006">Python</a>
         
     </body>
 </html>
